(Format: Year/Month/Day)
Changes for 0.9.14:
*05/06/23:
  * Moved window menu from FluxboxWindow to BScreen, so  
    we now use one window menu per screen instead of one menu per window,
    thus saving memory and increasing speed.      (Henrik)
   Makefile.am, WindowCmd.hh/cc, LayerMenu.hh/cc,
   Window.hh/cc, Screen.hh/cc, SendToMenu.hh/cc, Workspace.cc,
   Toolbar.hh/cc, Slit.hh/cc, Remember.hh/cc, ToggleMenu.hh,
   MenuCreator.hh/cc
   FbTk/MenuItem.hh/cc, FbTk/Menu.cc
*05/06/19:
  * Fix shaded + iconic windows + restart (Simon)
    - use ATTRIB_HIDDEN, can't use IconicState
    Window.cc
  * Revert shaded window fix. Wrong approach and caused crashes (Simon)
    Window.cc
  * Change FbWinFrame to use a Container (Simon)
    FbWinFrame.hh/cc Container.hh/cc
*05/06/18:
  * Fixes #1206821, unportable usage of grep in fbgm (thanx Dung)
    util/fluxbox-generate_menu.in
  * Fixes #1116965, #1047529, shaded windows on restart (Mathias)
    Window.cc
  * little Fix for font effects (Mathias)
    FbTk/ThemeItems.cc
*05/06/15:
  * Enhanced MoveTo, fixes #1074568 (Mathias)
      MoveTo <int|*> <int|*> <Reference Corner>
       - * means "use current value"
       - Reference Corner is one of:
         - UpperLeft, Upper, UpperRight
         - Left, Right
         - LowerLeft, Lower, Right
       examples:
         MoveTo 0 * Left       -> snap to left workspace edge
         MoveTo * 0 Lower      -> snap to lower workspace edge
         MoveTo 0 0 UpperRight -> snap to upper right workspace corner
    FbCommandFactory.cc CurrentWindowCmd.cc/hh
  * Fixes #1198192, vlc to fbgm (Mathias)
    fluxbox-generate_menu.in
  * Fixes #1213003, SendToWorkspace shouldnt follow (Mathias)
      - SendToWorkspace silently changes the workspace of the window
      - TakeToWorkspace takes the window and puts it onto the ws
    FbCommandFactory.cc CurrentWindowCmd.cc/hh
  * Fixes #1216020, *.font.effect wont get cleared if not defined in style (Mathias)
    FbTk/Font.cc
*05/06/09: